--- a/index.html
+++ b/index.html
@@ -1,29 +1,30 @@
 <!DOCTYPE html>
-<html lang="en" class="astro-WSE4VX5U">
+<html lang="en" class="astro-IGG6Y4Q3">
 <head>
+	<base href="/astro-base-component-styles/">
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width">
 	<title>My Astro Site</title>
 
-	<link rel="icon" type="image/x-icon" href="/favicon.ico">
+	<link rel="icon" type="image/x-icon" href="favicon.ico">
 
 	
 	
-<link rel="stylesheet" href="/assets/asset.2cb5588a.css"></link>
+<link rel="stylesheet" href="/assets/asset.ff9db606.css"></link>
 </head>
 <body>
-	<main class="astro-WSE4VX5U">
-		<header class="astro-WSE4VX5U">
-			<div class="astro-WSE4VX5U">
-				<img height="80" width="60" src="/logo.svg" alt="Astro logo">
+	<main class="astro-IGG6Y4Q3">
+		<header class="astro-IGG6Y4Q3">
+			<div class="astro-IGG6Y4Q3">
+				<img height="80" width="60" src="logo.svg" alt="Astro logo">
 
-				<h1 class="astro-WSE4VX5U">Welcome to <a href="https://astro.build/" class="astro-WSE4VX5U">Astro</a></h1>
+				<h1 class="astro-IGG6Y4Q3">Welcome to <a href="https://astro.build/" class="astro-IGG6Y4Q3">Astro</a></h1>
 			</div>
 		</header>
 
-		<article class="astro-WSE4VX5U">
-			<div class="banner astro-WSE4VX5U">
-				<p class="astro-WSE4VX5U"><strong class="astro-WSE4VX5U">🧑‍🚀 Seasoned astronaut?</strong> Delete this template and have fun!</p>
+		<article class="astro-IGG6Y4Q3">
+			<div class="banner astro-IGG6Y4Q3">
+				<p class="astro-IGG6Y4Q3"><strong class="astro-IGG6Y4Q3">🧑‍🚀 Seasoned astronaut?</strong> Delete this template and have fun!</p>
 			</div>
 			<h2 id="-project-structure">🚀 Project Structure</h2>
 <p>Inside of your Astro project, you’ll see the following folders and files:</p>
