--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
 	
 	
-<link rel="stylesheet" href="/assets/asset.ff9db606.css"></link>
+<link rel="stylesheet" href="/astro-base-component-styles/assets/asset.ff9db606.css"></link>
 </head>
 <body>
 	<main class="astro-IGG6Y4Q3">
